[gd_scene load_steps=3 format=3 uid="uid://c9n2p3q4r5s6"]

[ext_resource type="Script" path="res://scripts/Tower.gd" id="1_ghi789"]
[ext_resource type="PackedScene" path="res://scenes/Projectile.tscn" id="2_jkl012"]

[node name="Tower" type="StaticBody2D"]
script = ExtResource("1_ghi789")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="DetectionArea" type="Area2D" parent="."]

[node name="DetectionRadius" type="CollisionShape2D" parent="DetectionArea"]

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 1.0
autostart = true
